# cpp-sdk

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: BaseConcreteConfig.cpp.8D1764AC70C821B7.idx  BaseConcreteConfig.h.2FD6A190DF8A60BF.idx  Error.cpp.31B9A9874C643690.idx  Error.h.AC52BF266ABD0C68.idx  ErrorResponse.cpp.AED7A0E00585A54E.idx  ErrorResponse.h.9B7397EC1975D8AE.idx  HashSchemaRequest.cpp.364A12CEA505FA8A.idx  HashSchemaRequest.h.A636D132EB5EC832.idx  Helpers.cpp.706121591155C15D.idx  Helpers.h.13F648683C19D917.idx  SchemaDigestResponse.cpp.A327E0988CEBE423.idx  SchemaDigestResponse.h.50B4B1EF13ED3122.idx  abi_macros.hpp.6F9A3A5C548D7710.idx  accept.hpp.7DD4AB801A63FCCD.idx  add.hpp.2813F2109DC6CDF5.idx  add_const.hpp.B3185536EA3422E7.idx  add_cv.hpp.30897ADA570E555D.idx  add_lvalue_reference.hpp.3E9D2627840E895C.idx  add_pointer.hpp.D8241A7017F933F9.idx  add_reference.hpp.66F20BE8BAFAE2B5.idx  add_rvalue_reference.hpp.AA4A61BAC70E70FE.idx  add_volatile.hpp.94894F4E8F9E4C7B.idx  address.hpp.A55630F56D154B10.idx  address.hpp.A62D1C58EB459D5A.idx  address.ipp.390BF8393AF1F73E.idx  address_v4.hpp.0900D7F2A386104D.idx  address_v4.hpp.65BE928C8B8087C5.idx  adl.hpp.358EEB5531DC7667.idx  (+1371 more)
api/: git-info.txt  refresh.sh  regen.sh
cmake/: dependencies.cmake  examples.cmake  source.cmake  sources.cmake  tests.cmake  versioning.cmake
examples/: CMakeLists.txt  config-instance.json  config-instance.yaml  config-schema.json  config-schema.yaml
examples/development/: main.cpp
examples/filesys/: main.cpp
examples/filters/: CMakeLists.txt  main.cpp
examples/from_agent/: main.cpp
examples/from_file/: main.cpp
examples/get_param/: CMakeLists.txt  main.cpp
examples/get_param_ros2/: CMakeLists.txt  main.cpp
examples/get_value/: CMakeLists.txt  main.cpp
examples/http/: main.cpp
examples/list_params/: CMakeLists.txt  main.cpp
examples/production/: main.cpp
examples/socket/: main.cpp
include/miru/: commit.hpp.in  version.hpp.in
miru/: config.cpp  config.hpp  errors.cpp  errors.hpp  exceptions.hpp  unix_socket_client.cpp  unix_socket_client.hpp  utils.cpp  utils.hpp
miru/client/: http_client.cpp  http_client.hpp  unix_socket.cpp  unix_socket.hpp
miru/config/: README.md  config.cpp  config.hpp  errors.hpp  json.cpp  json.hpp  utils.hpp
miru/details/: errors.cpp  errors.hpp  utils.cpp  utils.hpp
miru/filesys/: dir.cpp  dir.hpp  errors.hpp  file.cpp  file.hpp  json.hpp  path.cpp  path.hpp  yaml.hpp
miru/http/: client.cpp  client.hpp  client_fwd.hpp  errors.cpp  errors.hpp  socket_client.cpp  socket_client.hpp  socket_session.cpp  socket_session.hpp  utils.cpp  utils.hpp
miru/params/: composite.cpp  composite.hpp  composite.tpp  errors.hpp  exceptions.hpp  iterator.hpp  json.cpp  json.hpp  load.cpp  loader.cpp  loader.hpp  parameter.cpp  parameter.hpp  parameter_fwd.hpp  parse.cpp  parse.hpp  query.cpp  query.hpp  ros2.cpp  ros2.hpp  scalar.cpp  scalar.hpp  type.hpp  utils.cpp  utils.hpp  value.cpp  value.hpp  yaml.cpp  yaml.hpp
miru/query/: errors.hpp  filter.cpp  filter.hpp  query.cpp  query.hpp  ros2.cpp  ros2.hpp  ros2_fwd.hpp
scripts/: lint.sh
scripts/openapi/: git-info.txt  refresh.sh
scripts/socket_client/: Makefile  git-info.txt  refresh.sh
src/: CMakeLists.txt  utils.cpp  utils.hpp
src/config/: builder.cpp  builder.hpp  config.cpp  config_impl.cpp  config_impl.hpp  errors.hpp  instance.cpp  instance_builder.cpp  instance_builder.hpp  instance_impl.cpp  instance_impl.hpp
src/configs/: errors.hpp  instance.cpp  instance_builder.cpp  instance_builder.hpp  instance_impl.cpp  instance_impl.hpp
src/details/: errors.cpp  type_conversion.cpp
src/filesys/: dir.cpp  dir.hpp  errors.hpp  file.cpp  file.hpp  path.cpp
src/http/: client.hpp  errors.cpp  errors.hpp  socket_client.cpp  socket_client.hpp  socket_session.cpp  socket_session.hpp  utils.cpp  utils.hpp
src/http/models/: BaseConcreteConfig.cpp  BaseConcreteConfig.h  BaseConfigInstance.cpp  BaseConfigInstance.h  ConfigInstance.cpp  ConfigInstance.h  ConfigInstanceActivityStatus.cpp  ConfigInstanceActivityStatus.h  ConfigInstanceErrorStatus.h  ConfigInstanceStatus.cpp  ConfigInstanceTargetStatus.cpp  ConfigInstanceTargetStatus.h  Helpers.cpp  RefreshLatestConcreteConfigRequest.h  RefreshLatestConfigInstanceRequest.cpp  RefreshLatestConfigInstanceRequest.h
src/params/: composite.cpp  composite.tpp  errors.hpp  parameter.cpp  parse.cpp  parse.hpp  scalar.cpp  utils.cpp  utils.hpp  value.cpp  value.hpp
src/query/: filter.cpp  ros2.cpp
src/query/details/: query.cpp
test/: CMakeLists.txt  utils_test.cpp  utils_test.hpp
test/config/: config_test.cpp  json_test.cpp  utils_test.cpp  yaml_test.cpp
test/config/details/: utils_test.cpp
test/configs/: instance_test.cpp  utils_test.cpp
test/details/: type_conversion_test.cpp  type_conversion_test.hpp  utils_test.cpp  utils_test.hpp
test/filesys/: dir_test.cpp  file_test.cpp  path_test.cpp
test/filesys/details/: dir_test.cpp  file_test.cpp  path_test.cpp
test/http/: client_test.cpp  mock.cpp  mock.hpp  socket_client_test.cpp
test/http/details/: socket_client_test.cpp
test/params/: composite_test.cpp  load_test.cpp  loader_test.cpp  parameter_test.cpp  params_test.cpp  parse_test.cpp  scalar_test.cpp  scalar_test.hpp  utils_test.cpp
test/params/details/: composite_test.cpp  parse_test.cpp  scalar_test.cpp  utils_test.cpp
test/query/: filter_test.cpp  query_test.cpp  query_test.hpp  ros2_test.cpp
test/test_utils/: query.hpp  testdata.cpp  testdata.hpp  utils.cpp  utils.hpp
test/testdata/config/configs/: motion-control.json
test/testdata/config/instances/: motion-control.yaml
test/testdata/config/schemas/: empty-config-slug.json  empty-config-slug.yaml  empty-config-type-slug.json  empty-config-type-slug.yaml  motion-control.json  motion-control.yaml
test/testdata/filesys/: arglebargle.txt  deleteme.yaml  golang.go  invalid.json  invalid.yaml  load-params.json  text.txt  valid.json  valid.yaml  valid.yml
test/testdata/params/: load.json  load.yaml
test/testdata/query/: query.json
(+66 files in other folders)
